<resources>
    <string name="app_name">Self</string>
    <string name="text_title">Self . Gratitude . Journal</string>
    <string name="get_started_text">Get Sarted</string>
    <string name="grateful_text">What are you grateful for today?</string>
    <string name="email">Email</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="email_login">Login</string>
    <string name="or_text">Or</string>
    <string name="create_account_text">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="save_button">Save</string>
    <string name="thoughts">Thoughts</string>
    <string name="title_hint">Title</string>
    <string name="menu_title">Add thoughts</string>
    <string name="signout">Signout</string>
    <string name="no_thoughts_hint">Write a Journal Entry by clicking the \\\"+\\\" icon above</string>
</resources>
