<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient_bg"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:progressBarStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <AutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password_hint"
        android:maxLines="1"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/email_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_login"
        android:background="@android:color/transparent"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/or_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/or_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/create_acc_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account_text"
        android:background="@android:color/transparent"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="16dp"/>

</LinearLayout>