<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient_bg"
    tools:context=".CreateAccountActivity">

    <ProgressBar
        android:id="@+id/create_acct_progress"
        style="?android:progressBarStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/username_hint"
        android:maxLines="1"
        android:inputType="text"/>

    <AutoCompleteTextView
        android:id="@+id/email_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/password_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password_hint"
        android:maxLines="1"
        android:inputType="textPassword"/>


    <Button
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account_text"
        android:background="@android:color/transparent"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="16dp"/>

</LinearLayout>