<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="18dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/text_title"
        android:textSize="30sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <androidx.cardview.widget.CardView
            app:cardElevation="6dp"
            app:cardUseCompatPadding = "true"
            app:cardCornerRadius = "8dp"
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:id="@+id/grateful_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/grateful_text"
                android:textSize="18sp"/>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/get_started_text"
        android:textColor="@color/colorAccent" />

</LinearLayout>